<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context=".FeedbackForm">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Feedback"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textColor="#F44336"
            android:layout_marginTop="30dp"
            android:textSize="20dp" />

        <com.hsalf.smileyrating.SmileyRating
            android:id="@+id/a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/q2"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:textColor="#F44336"
            android:textSize="20dp" />

        <com.hsalf.smileyrating.SmileyRating
            android:id="@+id/a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:textColor="#F44336"
            android:layout_marginTop="30dp"
            android:textSize="20dp" />

        <com.hsalf.smileyrating.SmileyRating
            android:id="@+id/a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:textColor="#F44336"
            android:textSize="20dp" />

        <com.hsalf.smileyrating.SmileyRating
            android:id="@+id/a4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/q5"
            android:textColor="#F44336"
            android:textSize="20dp" />

        <com.hsalf.smileyrating.SmileyRating
            android:id="@+id/a5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/Submit"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/loginbutton_back"
            android:text="@string/submit"
            android:textSize="22dp" />
    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>